@@ -2,17 +2,18 @@
 Hash: SHA256
 
 AUX 50notmuch-gentoo.el 291 SHA256 68c0ecfd3d10246fb65ec48b097c1b477ce33f44014f602f903c16b752ba7d3b SHA512 80612ba5ae90f2fbb24b38bae99b660c5e3d58e7390a4bb3a0e5e9b49092e38f189347344286072617935abf7ea08b538f68e8227705ca0b2b44985c4c0d024b WHIRLPOOL c149cfb298cb51bef064c433481444dbd21a20903ee8560ae758a4b4fc0dd983db789b2d1343dc8b30e5e4a0443ee636e5742ba471fe981eb2262ad03567fd22
-EBUILD notmuch-9999.ebuild 3703 SHA256 65b5cfff5143f1104b02a730c1c74a859e5d9c79956df2eda4854d07b093681f SHA512 43c8a23b03f5739699ac6e3329a5c2738d2c8327806553eef21448e62bdd2a514eed50f72b7a49d347ed687e500d4019945bbecbc02df3a1b252812472cc14dd WHIRLPOOL c4e25766787d66387691375c2335b84b54d79aea4436998b97bbba30c68156db61ad63a4d891c5762f3a2ac31e911c0c7ddfb81f6039f1a178f76a1fa4240e62
-MISC ChangeLog 2241 SHA256 ec5f2780f895a34250e3741c39ced2e645a76fce370511a4a145344f447f6602 SHA512 588c07e8d082d8808c2a65a19c26af52f72aa0924f9790e1b0a83b2d577bef0f5870f94d99e99892732cd05cfaa01b955f20ea7ade701f8f6069b3afe78b876a WHIRLPOOL 363bcb18c23579deb879a32c1a39737e3a65deaff52f94dcdf68539add320987fbfce290e6446bb9b70b3289cd2c6dd8ba1e8ac7212508896b8901a8d9d9cf85
-MISC metadata.xml 1041 SHA256 d8a3f9a046b198fe004bf49155441385b9aafd8d10bf523cbe70b037d849fd85 SHA512 9471531172e3dd6e2bab2d47f83e546e97ccb71bfe84bed177ab894c4f902e7e61a58cc6ceecc68b31379f922ab033d8e2e9dd5ba00845e9336c5d840e93b637 WHIRLPOOL 088ea5cfbfc05643406fc4f52579c9d71b161aa09e71a6a1c43dae956084d0ae7118db6a18b086ee4c823ef08be506c113a2d1097217d6ddbca73aaa69dad883
+AUX 60notmuch-pick-gentoo.el 108 SHA256 5dea2e2113cc3ab74c351f0396ac0a98df9d3eebd14d1e811e6d723cea69d12c SHA512 35da56121a0b13a7c13d5462512277d77dd0b965e0060e58e654056a5a5755e602d3daaf4732673a6a56421fa64e6d0570d655eb1a86fb0ae37af6129a90be16 WHIRLPOOL 52603df04fff71d206fb51d3cea65eb1f403e23495846b90ad8deafeef4d326f08a27c07aa84778bef0f3d962b68d2700c50b31217caeadee9c5f5961a8b9e1c
+EBUILD notmuch-9999.ebuild 4143 SHA256 c672873c3c759830130f87bc2ff2f5a205fac2da32f9e0cf6df43bebbfddcaae SHA512 9e3a568f2225d51ed5d707433638e647a51b158e7e57a1afcd3fd09cbd7866ebe9d17c7eecef4035817892c37c1c2b006fdc9b52e77088366350c57cfabd6b42 WHIRLPOOL e85d923ef6f4a87203642f99d15ff3eba9a78db954168f3d3300a08af724eb9dc96d2a3d90aacd7b4b3ff4955a8ae521d0321288105e838a7e4520869c3a8c27
+MISC ChangeLog 2414 SHA256 e8c9c6a5027a249dd999d389d8026050715399ee57d81e82265f47ce7e9c181a SHA512 004940ac78cc177809c857838a8121bc6870c047e7c2380bb5c0b7dde24d72e30fb7d21b383b09fface95a558108e0f26441e989a18a83ef752c156c6be51181 WHIRLPOOL 1e8334717a00ac5e3792c3ddb411092589f30a8ec9672dbaeeaa585a773a4e6a342bb6c5e4d88c73ae896f2df0033a9b4b13ffb11da0c3625d91f51fb1327a36
+MISC metadata.xml 1130 SHA256 bef417ea1ad1a12a2639eb9644e7b8fda664f2c19047e2357aa56c3964bafb7b SHA512 e58811e997cdf258f70a9c2baa526d8c3acb76dfc208b43bc8bff3a4d1433ed08231956f9fbe098fd9ee26d4002bdb35617fbb0e578510489c9671d969b84eef WHIRLPOOL e72970d425eda43b1f635406f2ad04c725373662716ed4e4c1e88366da0d80bc2cb9b90da264a3cbd71d474881984b187fcfff15e78ffda7fdf161663e27b5d4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQ+VqNAAoJEPATRTHh2/q1x28IAJIgsnLb0JtGEKj7tQm4Kifh
-hAtz/Gh7Qq2ftmDFFCUfJeU9HPKjl/mXM+Nu4IzDlk0w2beOBKCWbRU3qW/eqxvO
-3MjPa4BnWNXQt0pboTsfqV3gMCSofrTKpLtW54uVn3ubNaF6gqlfvev44DNPh7ng
-TNqoAZJSwUHNz9mZ+qhRlReDK89BIrqTRCifmk6wulNzZqSQiljF5DyW3MK1tFH0
-MeLo5nWfk+Wsez9cpxd0uOB0aWGxa6fKnlv5SbfcFQQ/3gphYu3X4WvQPo7qCtd7
-CmaDXx+52OqxqZfDEQ5jXdVLJ+xPXUt97dTEweh/kwp6OYvLIUG/CX5tqlsU8ZA=
-=qmla
+iQEcBAEBCAAGBQJQ/APoAAoJEPATRTHh2/q1WUkH/iezC40ZC5GzGQWRZvTlSKVV
+uV2dt2oxE1dNssq2W3X+RFE6KB0BPoTmH9fX/FgpWNvze5zf9TnoozrbVp0v0C2b
+z/y+Daj4Z00+f3w2yIQLf8fgW3zDnRxqJrimKMBpw8SoBQhWNcMeCch/T6V4CDKj
+v1Rn4LKgW+rMEu8E2oQTU+QBt/PuDpZ4TPI3u0xEu/8htXuC9bao1AElMGohEqG7
+BkArstFx1Ld2y9dkZx9CwoNqWBrXx+1ycGKojIlIu9+gbgNGIjcE0Qjyf4qtgYbG
+0tGHpRxSyhxFY8LxXbbEWXfhm0bkec+6fatUpFp8V9xXqCewdaEldYyVCTr6iV8=
+=qA8M
 -----END PGP SIGNATURE-----
