@@ -1,0 +1,1 @@
+(autoload 'notmuch-pick "notmuch-pick" "Run notmuch pick with the given `query' and display the results" t)
