@@ -14,6 +14,8 @@
 		<flag name="nmbug">Install experimental tag sharing /
 			pseudo-bug-tracking script for Notmuch
 			(see http://notmuchmail.org/nmbug/)</flag>
+		<flag name="pick">Experimental threaded message view for the emacs
+			interface</flag>
 		<flag name="vim">Install Vim UI (experimental)</flag>
 	</use>
 	<longdescription lang="en">
