@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Jan 2013; Amadeusz Żołnowski <aidecoe@gentoo.org>
+  +files/60notmuch-pick-gentoo.el, notmuch-9999.ebuild, metadata.xml:
+  Synced with net-mail/notmuch-0.15::gentoo.
+
   18 Jan 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
   Require libxml2 flag for app-editors/emacs.
 
